--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
 
   <!-- import angular -->
   <script src="./node_modules/angular/angular.min.js"></script>
+  <!-- import jquery -->
+  <script src="./node_modules/jquery/dist/jquery.min.js"></script>
   <!-- import bootstrap -->
   <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
   <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
   <!-- import angular script -->
-  <script src="./srcipts/module.js"></script>
+  <script src="./scripts/module.js"></script>
+  <script src="./scripts/controllers.js"></script>
+  <script src="./scripts/services.js"></script>
 
   <!-- CSS files -->
   <link rel="stylesheet" href="./css/index.css">
@@ -23,7 +27,7 @@
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 </head>
 
-<body ng-app>
+<body ng-app="githubApp">
 
   <header>
     <nav>
@@ -31,17 +35,46 @@
     </nav>
   </header>
 
-  <div class="jumbotron">
+  <div class="jumbotron" ng-controller="searchUserController">
     <div class="container">
       <div class="input-form">
-        <form action="">
+        <form name="searchUserForm">
           <div class="row">
-            <div class="form-group">
-              <label for="userName">UserName</label>
-              <input type="text" class="form-control" name="userName" required>
-            </div>
+
+            <!-- Offsetting input field -->
+            <div class="offset-4"></div>
+            <!-- input field -->
+            <div class="col-md-4">
+              <div class="form-group">
+                <input type="text" class="form-control" name="userName" ng-model="userName" required autocomplete="off">
+                <label 
+                  for="userName"
+                  ng-class="searchUserForm.userName.$dirty && searchUserForm.userName.$viewValue != '' ? 'active-label' : '';">User Name</label>
+              </div>
+              <button 
+                class="btn btn-primary" 
+                ng-class="searchUserForm.$valid ? 'active-btn' : 'inactive-btn' "                
+                ng-click="onSubmit()"
+                ng-disabled="searchUserForm.$invalid">Search</button>
+            </div>            
           </div>
         </form>
+      </div>
+
+      <div class="row">
+        Total Users found - <span ng-bind="total_count"></span>
+      </div>
+      <div class="table-responsive">
+
+        <table class="table table-striped table-bordered" id="userData">
+          <tbody>
+            <tr ng-repeat="user in users">
+              <td><img class="img-thumbnail img-fluid user-avatar" src="{{user.avatar_url}}" alt=""></td>
+              <td><p ng-bind="user.login"></p></td>
+              <td><a href="{{user.html_url}}" target="_blank">View Profile</a></td>
+            </tr>            
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
