--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- import angular script -->
   <script src="./scripts/module.js"></script>
   <script src="./scripts/controllers.js"></script>
-  <script src="./scripts/services.js"></script>
+  <script src="./scripts/githubService.js"></script>
 
   <!-- CSS files -->
   <link rel="stylesheet" href="./css/index.css">
