Added code for custom charts.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <script src="./node_modules/angular-route/angular-route.min.js"></script>
   <!-- import jquery -->
   <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+  <script
+  src="https://www.gstatic.com/charts/loader.js"></script>
   <!-- import bootstrap -->
   <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
   <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -20,6 +22,8 @@
   <script src="./scripts/module.js"></script>
   <script src="./scripts/routing.js"></script>
   <script src="./scripts/controllers.js"></script>
+  <script src="./scripts/chartControllers.js"></script>
+  <script src="./scripts/directives.js"></script>
   <script src="./scripts/githubService.js"></script>
   <script src="./scripts/spinnerService.js"></script>
 
