Added Repo Detail Component and 3 API charts.

--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Github Search</title>
+  <title>Github Search App</title>
 
   <!-- import angular -->
   <script src="./node_modules/angular/angular.min.js"></script>
+  <!-- angular routing file -->
   <script src="./node_modules/angular-route/angular-route.min.js"></script>
   <!-- import jquery -->
   <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+  <!-- Charting library -->
   <script
   src="https://www.gstatic.com/charts/loader.js"></script>
   <!-- import bootstrap -->
@@ -29,6 +31,7 @@
 
   <!-- CSS files -->
   <link rel="stylesheet" href="./css/index.css">
+  <!-- Font Awesome Icons CDN -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" 
 
   <!-- Favicon -->
