--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <script src="./scripts/chartControllers.js"></script>
   <script src="./scripts/directives.js"></script>
   <script src="./scripts/githubService.js"></script>
+  <script src="./scripts/chartingService.js"></script>
 
   <!-- CSS files -->
   <link rel="stylesheet" href="./css/index.css">
