--- a/public/index.html
+++ b/public/index.html
@@ -8,17 +8,22 @@
   <title>Github Search App</title>
 
   <!-- import angular -->
-  <script src="./node_modules/angular/angular.min.js"></script>
+  <!-- <script src="../node_modules/angular/angular.min.js"></script> -->
+  <script <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.min.js"></script>
   <!-- angular routing file -->
-  <script src="./node_modules/angular-route/angular-route.min.js"></script>
+  <!-- <script src="../node_modules/angular-route/angular-route.min.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-route.min.js"></script>
   <!-- import jquery -->
-  <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+  <!-- <script src="../node_modules/jquery/dist/jquery.min.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <!-- Charting library -->
   <script
   src="https://www.gstatic.com/charts/loader.js"></script>
   <!-- import bootstrap -->
-  <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
-  <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <!-- <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script> -->
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 
   <!-- import angular script -->
   <script src="./scripts/module.js"></script>
